feat(add get project role for each project)
